[package]
name = "bdk_electrum"
version = "0.15.0"
edition = "2021"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_electrum"
description = "Fetch data from electrum in the form BDK accepts"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bdk_chain = { path = "../chain", version = "0.16.0" }
bdk_chain = { version = "0.16.0" }
# electrum-client = { version = "0.20" }
electrum-client = { git = "https://github.com/thunderbiscuit/rust-electrum-client/", branch = "feature/ring-feature", default-features = false, features = ["use-rustls-ring"] }

[dev-dependencies]
bdk_testenv = { path = "../testenv", default-features = false }
